--- a/PracticeUI/PracticeUI/Base.lproj/Main.storyboard
+++ b/PracticeUI/PracticeUI/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xdT-Uu-Kwh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bxI-HG-rKW">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -94,6 +94,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bOy-At-oeU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="771" y="74"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="lSF-Z0-Jbl">
+            <objects>
+                <viewController id="bxI-HG-rKW" customClass="SecondViewController" customModule="PracticeUI" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kgz-O5-Bkj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0d5-uG-LyL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WebTableViewCell" rowHeight="337" id="W2P-ID-rHc" customClass="WebTableViewCell" customModule="PracticeUI" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="337"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="W2P-ID-rHc" id="Wcr-m6-buE">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="337"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="seT-6r-mzl">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="337"/>
+                                                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="27S-r8-hTQ"/>
+                                                    </constraints>
+                                                </webView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="seT-6r-mzl" secondAttribute="bottom" id="aD4-Hn-F4P"/>
+                                                <constraint firstItem="seT-6r-mzl" firstAttribute="leading" secondItem="Wcr-m6-buE" secondAttribute="leading" id="cvt-lr-4kU"/>
+                                                <constraint firstAttribute="trailing" secondItem="seT-6r-mzl" secondAttribute="trailing" id="dyB-k7-dM8"/>
+                                                <constraint firstItem="seT-6r-mzl" firstAttribute="top" secondItem="Wcr-m6-buE" secondAttribute="top" id="pMb-14-37a"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="webView" destination="seT-6r-mzl" id="Y3P-j5-IGI"/>
+                                            <outlet property="webViewHeightConstraint" destination="27S-r8-hTQ" id="B08-8I-cqN"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LtR-Ia-5OQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LtR-Ia-5OQ" firstAttribute="trailing" secondItem="0d5-uG-LyL" secondAttribute="trailing" id="8Y9-ZJ-vsn"/>
+                            <constraint firstItem="0d5-uG-LyL" firstAttribute="leading" secondItem="LtR-Ia-5OQ" secondAttribute="leading" id="LTX-Me-u8n"/>
+                            <constraint firstItem="LtR-Ia-5OQ" firstAttribute="bottom" secondItem="0d5-uG-LyL" secondAttribute="bottom" id="NVW-Wc-G3I"/>
+                            <constraint firstItem="0d5-uG-LyL" firstAttribute="top" secondItem="LtR-Ia-5OQ" secondAttribute="top" id="Rxu-xR-G2J"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableview" destination="0d5-uG-LyL" id="HjN-Wq-A20"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uhF-aM-4My" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1460.8695652173915" y="705.80357142857144"/>
         </scene>
     </scenes>
     <resources>
